--- a/css/palette-du-gout.css
+++ b/css/palette-du-gout.css
@@ -4,6 +4,15 @@ body{
     padding: 0;
 }
 
+/*fléche du logo(header)*/
+.fa-arrow-left {
+    position: absolute;
+    top: 30px;
+    z-index: 11;
+    left: 26px;
+    font-size: 20px;
+    color: black;
+}
 /*début de la version mobile*/
 @media(max-width:767.98px){
 /*Début du header*/
@@ -19,14 +28,7 @@ body{
     z-index: 5;
 }
 
-.fa-arrow-left{
-    position: absolute;
-    top: 30px;
-    z-index: 11;
-    left: 26px;
-    font-size: 20px;
-    color: black;
-}
+
 
 .palette-du-gout-img {
     padding-top:70px ;
@@ -49,7 +51,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 5px;
+    padding-bottom: 35px;
 }
 
 .title-conteneur{
@@ -115,6 +117,7 @@ display: none;
     height: 69px;
     width: 349px;
     margin-bottom: 15px;
+    box-shadow: 0 4.01px 15.04px 0 rgba(0, 0, 0, 0.1);
 }
 
 .title-menu{
@@ -123,6 +126,8 @@ display: none;
     border-bottom: 3px solid rgba(153, 226, 208, 1);
     width: 11%;
     padding-bottom: 5px;
+    font-weight: 200;
+    font-size: 16px;
 }
 .title-h3{
     padding-left: 15px;
@@ -332,7 +337,10 @@ display: none;
    display: inline;
 
 }
-
+/*ajout de l'espace au dessus du titre dessert */
+.dessert{
+    margin-top: 6px;
+}
 
 /*Prix des entrées*/
 
@@ -344,18 +352,24 @@ display: none;
 
 
 /*Bouton commander*/
+.button-commander{
+    margin-top: 12px;
+}
+
+
 .btn-commander{
     padding: 15px;
     background: linear-gradient(rgba(255, 121, 218, 1), rgba(147, 86, 220, 1));
     border: none;
     border-radius: 25px;
     color: white;
-    width: 218px;
+    width: 186px;
     height: 50px;
     margin-top: 15px;
     font-size: 16px;
     font-family: 'Roboto';
     font-weight: 500;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
 }
 
 
@@ -363,23 +377,96 @@ display: none;
 .footer{
     display: inline;
     position: absolute;
-    top: 89.01em;
+    top: 92.01em;
     background-color: rgba(53, 53, 53, 1);
-    color: white;
+    color: rgba(255, 255, 255, 1);
     width: 100%;
-    font-family: "Roboto";
+}
+
+.logo2{
+    margin-left: 22px;
+    font-family: 'Shrikhand';
+    font-style: italic;
+    font-weight:unset;
+    font-size: 18px;
+
+    
 }
 
 .footer-link{
     text-decoration: none;
     color: white;
+    line-height: 26px;
     
 
 }
 .link-footer{
     list-style: none;
     padding: 0;
+    font-weight: 400;
+    margin-left: 22px;
+    font-size: 16px;
+    font-family: 'Roboto';
+
+
 
 }
+
+}
+/*début de la partie desktop*/
+@media(min-width:768px){
+    body{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+    .logo {
+        display: flex;
+        justify-content: center;
+        padding: 20px 0;
+        /* box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15); */
+        position: fixed;
+        width: 100%;
+        background-color: rgba(255, 255, 255, 1);
+        z-index: 5;
+        left: 0;
+    }
+
+    /*Image du header*/
+
+.palette-du-gout-img {
+    padding-top:70px ;
+    height: 383px;
+    width: 100%;
+
+}
+
+.palette-du-gout-img img{
+    width: 100%;
+    height: 275px;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+
+
+/*bloc conteneur*/
+.block-conteneur {
+    background-color: rgba(246, 246, 246, 1);
+    position: absolute;
+    top: 422px;
+    width: 100%;
+    max-width: 1055px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 35px;
+    margin: auto;
+}
+
 
 }
