--- a/css/la-palette-du-gout.css
+++ b/css/la-palette-du-gout.css
@@ -84,6 +84,7 @@ li {
     top: 31px;
     right: 41px;
 }
+
 /*H2 style nom du restaurant*/
 .name-restaurant{
     font-family: "Shrikhand";
@@ -506,12 +507,71 @@ display: none;
     margin-left: 22px;
     font-size: 16px;
     font-family: 'Roboto';
+}
 
+/*Page La note enchantée*/
+.block-contener{
+    background-color: rgba(246, 246, 246, 1);
+    position: absolute;
+    top: 300px;
+    width: 100%;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 38px;
+}
 
+.foter{
+    display: inline;
+    position: absolute;
+    top: 97.7em;
+    background-color: rgba(53, 53, 53, 1);
+    color: rgba(255, 255, 255, 1);
+    width: 100%;
+}
+
+.link-foter{
+    list-style: none;
+    padding: 0;
+    font-weight: 400;
+    margin-left: 22px;
+    font-size: 16px;
+    font-family: 'Roboto';
+    padding-bottom: 0.5px;
+}
+
+/*modification de l'espace pour le coeur*/
+#resto-2:checked+.test1 .likee {
+    display: inline;
+    position: absolute;
+   /* width: 20px;*/
+    top: 31px;
+    right: 28px;
+}
+
+.dislikee{
+    display: inline;
+    position: absolute;
+    top: 31px;
+    right: 28px;
 
 }
 
+.like{
+    display: none;
+    
+    }
+
 }
+
+
+
+
+
+
+
 /*début de la partie desktop*/
 @media(min-width:768px){
     body{
@@ -843,4 +903,67 @@ color: white;
     text-decoration: none;
     font-family: 'Roboto';
 }
+
+
+
+/*Page La note enchantée*/
+/*bloc conteneur*/
+.block-contener {
+    background-color: rgba(246, 246, 246, 1);
+    position: absolute;
+    top: 422px;
+    width: 100%;
+    max-width: 1055px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 55px;
+    margin: auto;
+       
+}
+
+.foter {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    position: absolute;
+    background-color: rgba(53, 53, 53, 1);
+    color: rgba(255, 255, 255, 1);
+    width: 100%;
+    top: 106.7em;
+    left: 0;
+    height: 80px;
+    padding-top: 35px;
+    
+}
+
+.link-foter{
+    padding: 0;
+    display: flex;
+}
+
+/*modification de l'espace pour le coeur*/
+#resto-2:checked+.test1 .likee {
+    display: inline;
+    position: absolute;
+   /* width: 20px;*/
+    top: 33px;
+    left: 46.3em;
+}
+
+.dislikee{
+    display: inline;
+    position: absolute;
+    top: 33px;
+    left: 46.3em;
+
+}
+
+.likee{
+    display: none;
+    
+    }
+
 }
