--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,11 @@ li{
     }
   }
 
+  .card-nav{
+    text-decoration: none;
+    color: black;
+}
+
 
 
 /*début de la version mobile*/
@@ -223,6 +228,9 @@ li{
         margin: auto;
     }
 
+   
+
+
     .card {
         width: 100%;
         height: 251px;
@@ -230,6 +238,8 @@ li{
         margin: 24px auto;
         background-color: rgba(255, 255, 255, 1);
         position: relative;
+        text-decoration: none;
+        color: inherit;
     }
 
     .card-img {
@@ -605,8 +615,12 @@ li{
         justify-content: space-between;
     }
 
-    .card {
+    .card-nav{
         width: 45%;
+    }
+
+    .card {
+        width: 100%;
         height: 251px;
         /* height: 300px; */
         border-radius: 15px;
