--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,6 @@ body {
     padding: 0;
 }
 
-li{
-    list-style: none;
-}
-
-.footer-link{
-    color: rgba(255, 255, 255, 1);
-    text-decoration: none;
-    font-family: 'Roboto';
-    
-}
 /*loader (chargement de la page)*/
 .loader-block{
     display: flex;
@@ -71,9 +61,20 @@ li{
     color: black;
 }
 
+/*FOOTER STYLE GLOBALE*/
+.footer-link{
+    color: rgba(255, 255, 255, 1);
+    text-decoration: none;
+    font-family: 'Roboto';
+    
+}
+
+li{
+    list-style: none;
+}
 
 
-/*début de la version mobile*/
+/*********début de la version mobile***************/
  
     /*STYLE LOGO*/
     .logo {
@@ -103,6 +104,12 @@ li{
         right: 0;
     }
 
+    /*logo de localisation*/
+    .fa-location-dot {
+        margin-right: 15px;
+    }
+
+    
     .location p{
         text-align: center;
         font-size: 16px;
@@ -110,17 +117,6 @@ li{
         margin: 12px;
         font-weight: 400;
         padding-right: 8px;
-    }
-
-    /*logo de localisation*/
-    .fa-location-dot {
-        margin-right: 15px;
-    }
-
-    .title {
-        text-align: center;
-        margin-top: 20px;
-        padding-bottom: 20px;
     }
 
 
@@ -131,6 +127,14 @@ li{
         padding-bottom: 50px;
     }
 
+
+    .title {
+        text-align: center;
+        margin-top: 20px;
+        padding-bottom: 20px;
+    }
+
+
     .title-top {
         width: 67%;
         margin: auto;
@@ -139,7 +143,8 @@ li{
         font-family: 'Roboto';
     }
 
-    .select {
+   
+    .top-p {
         width: 90%;
         margin: 20px auto;
         font-size: 18px;
@@ -161,14 +166,6 @@ li{
     }
 
     /*début de la partie fonctionnement*/
-    .title-fonctioning {
-        padding-bottom: 10px;
-        width: 340px;
-        font-size: 24px;
-        font-weight: 700;
-        font-family: 'Roboto';
-    }
-
     .fonctioning {
         display: flex;
         flex-direction: column;
@@ -178,16 +175,21 @@ li{
         background-color: #FFF;
     }
 
+    .title-fonctioning {
+        padding-bottom: 10px;
+        width: 340px;
+        font-size: 24px;
+        font-weight: 700;
+        font-family: 'Roboto';
+    }
+
     /* bouton de la partie fonctionnement*/
     .fonctioning-btn {
         border: none;
         border-radius: 20px;
         box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.15);
         width: 96%;
-        /* width: 322.49px; */
-        /* height: 72.38px; */
         text-align: center;
-        /* margin: 30px 11px; */
         margin: 20px 0 20px 16px;
         padding: 25px 0;
         display: flex;
@@ -195,14 +197,14 @@ li{
         align-items: center;
         
     }
-    /* le test du bouton fonctionnement */
+    /* le texte du bouton fonctionnement */
     .fonctioning-text{
         font-weight: 500;
         font-size: 16px;
         font-family: 'Roboto';
     }
 
-    /* le cercle avec le numero */
+    /* les cercles avec les numeros */
     .circle{
         position: absolute;
         left: 20px;
@@ -213,13 +215,9 @@ li{
     }
 
     /*début de la partie card*/
-    .restaurant-title {
-        width: 340px;
-        font-family: 'Roboto';
-        font-size: 24px;
-        font-weight: 700;
+    .resto{
+        background-color: rgba(246, 246, 246, 0.7);
     }
-
 
     .all-cards {
         background-color: rgba(246, 246, 246, 0.7);
@@ -228,8 +226,15 @@ li{
         margin: auto;
     }
 
-   
+    .restaurant-title {
+        width: 340px;
+        font-family: 'Roboto';
+        font-size: 24px;
+        font-weight: 700;
+    }
+    
 
+    
 
     .card {
         width: 100%;
@@ -242,90 +247,6 @@ li{
         color: inherit;
     }
 
-    .card-img {
-        width: 100%;
-        height: 170px;
-    }
-    /*block nouveau sur les cards*/
-    .news{
-        font-weight: 500;
-        position: absolute;
-        right: 20px;
-        top: 16px;
-        color: rgba(0, 135, 102, 1);
-        background-color: rgba(153, 226, 208, 1);
-        padding: 6px 10px;
-        font-family: 'Roboto';
-        font-size: 14px;
-        border-radius: 2px;
-
-    }
-
-    .card-text h3 {
-        line-height: 0;
-        margin-bottom: 28px;
-        font-size: 18px;
-        font-weight: 700;
-        font-family: 'Roboto';
-    }
-
-    .card-text p {
-        line-height: 0;
-        font-size: 17px;
-        font-weight: 300;
-        font-family: 'Roboto';
-
-    }
-
-    /*Positionnement de l'icone coeur sur les cards*/
-    .dislike{
-        display: inline;
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        width: 20px;
-    }
-
-    /*début de la section footer*/
-    .footer {
-        background-color: rgba(53, 53, 53, 1);
-        color: white;
-        padding: 10px 20px;
-    }
-
-    .logo2 {
-        font-family: "Shrikhand";
-        font-weight: 900;
-        font-style: italic;
-        color: rgba(255, 255, 255, 1);
-        font-size: 20px;
-    }
-
-    .space {
-        margin-left: 10px;
-    }
-
-    .resto{
-        background-color: rgba(246, 246, 246, 0.7);
-    }
-
-    .link{
-        padding-top: 7px;
-    }
-     .link-footer{
-        padding: 0;
-     }
-
-    /*icon footer*/
-    .fa-utensils {
-        color: white;
-        width: 20px;
-    }
-
-    .fa-handshake {
-        color: white;
-        width: 20px;
-    }
 
     #card1 {
         background-image: url('../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg');
@@ -359,46 +280,87 @@ li{
         border-radius: 15px 15px 0 0;
     }
 
+
+
+    .card-img {
+        width: 100%;
+        height: 170px;
+    }
+
+    /*block nouveau sur les cards*/
+    .news{
+        font-weight: 500;
+        position: absolute;
+        right: 20px;
+        top: 16px;
+        color: rgba(0, 135, 102, 1);
+        background-color: rgba(153, 226, 208, 1);
+        padding: 6px 10px;
+        font-family: 'Roboto';
+        font-size: 14px;
+        border-radius: 2px;
+
+    }
+
     .card-text {
         padding: 5px 10px;
     }
 
+    .card-text h3 {
+        line-height: 0;
+        margin-bottom: 28px;
+        font-size: 18px;
+        font-weight: 700;
+        font-family: 'Roboto';
+    }
+
+    .card-text p {
+        line-height: 0;
+        font-size: 17px;
+        font-weight: 300;
+        font-family: 'Roboto';
+
+    }
+
+    /*Positionnement de l'icone coeur sur les cards*/
+    .dislike{
+        display: inline;
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        width: 20px;
+    }
+
+    
+
     /* Gestion des bouton likes  */
-    .test1 {
+    .block-like {
         position: relative;
         bottom: 50px;
         left: 86%;
     }
 
-    .test1:hover {
+    .block-like:hover {
         cursor: pointer;
     }
 
+    /*Pour cacher le coeur violet au départ*/
     .like {
         display: none;
     }
 
-    #resto-1 {
+    /*Pour cacher le checkbox du coeur*/
+    input{
         display: none;
     }
 
-    #resto-2 {
+    /*Pour cacher le coeur blanc au clic */
+    input:checked+.block-like .dislike {
         display: none;
     }
 
-    #resto-3 {
-        display: none;
-    }
-
-    #resto-4 {
-        display: none;
-    }
-
-    #resto-1:checked+.test1 .dislike {
-        display: none;
-    }
-
-    #resto-1:checked+.test1 .like {
+    /*Pour afficher le coeur violet et le positionner*/
+    input:checked+.block-like .like {
         display: inline;
         position: absolute;
         top: 10px;
@@ -406,41 +368,51 @@ li{
         width: 20px;
     }
 
-    #resto-2:checked+.test1 .dislike {
-        display: none;
+    
+    
+
+    /*****************DÉBUT DE LA PARTIE FOOTER*********/
+    .footer {
+        background-color: rgba(53, 53, 53, 1);
+        color: white;
+        padding: 10px 20px;
     }
 
-    #resto-2:checked+.test1 .like {
-        display: inline;
-        position: absolute;
-        top: 10px;
-        left: 10px;
+    .logo2 {
+        font-family: "Shrikhand";
+        font-weight: 900;
+        font-style: italic;
+        color: rgba(255, 255, 255, 1);
+        font-size: 20px;
+    }
+
+
+     .link-footer{
+        padding: 0;
+     }
+
+     .link{
+        padding-top: 7px;
+    }
+
+    /*icon footer*/
+    .fa-utensils {
+        color: white;
         width: 20px;
     }
 
-    #resto-3:checked+.test1 .dislike {
-        display: none;
-    }
-
-    #resto-3:checked+.test1 .like {
-        display: inline;
-        position: absolute;
-        top: 10px;
-        left: 10px;
+    .fa-handshake {
+        color: white;
         width: 20px;
     }
 
-    #resto-4:checked+.test1 .dislike {
-        display: none;
-    }
 
-    #resto-4:checked+.test1 .like {
-        display: inline;
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        width: 20px;
-    }
+
+
+
+
+
+
 
 
 /* #################################################################### */
@@ -451,7 +423,6 @@ li{
         display: flex;
         justify-content: center;
         padding: 20px 0;
-        /* box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15); */
         position: fixed;
         width: 100%;
         background-color: rgba(255, 255, 255, 1);
@@ -467,11 +438,15 @@ li{
         background-color: #EAEAEA;
         padding: 5px;
         color: #353535;
-        /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); */
         position: absolute;
         top: 70px;
         left: 0;
         right: 0;
+    }
+
+    /*Icone de localisation*/
+    .fa-location-dot {
+        margin-right: 15px;
     }
 
     .location p {
@@ -483,23 +458,18 @@ li{
         padding-right: 8px;
     }
 
-    /*logo de localisation*/
-    .fa-location-dot {
-        margin-right: 15px;
-    }
-
-    .title {
-        text-align: center;
-        margin-top: 20px;
-        padding-bottom: 20px;
-    }
-
-
     /*DÉBUT DE LA PARTIE HAUTE*/
     .top {
         background-color: rgba(246, 246, 246, 0.7);
         padding-top: 150px;
         padding-bottom: 50px;
+    }
+
+
+    .title {
+        text-align: center;
+        margin-top: 20px;
+        padding-bottom: 20px;
     }
 
     .title-top {
@@ -510,7 +480,7 @@ li{
         font-family: 'Roboto';
     }
 
-    .select {
+    .top-p {
         width: 90%;
         margin: 20px auto;
         font-size: 18px;
@@ -535,14 +505,6 @@ li{
     }
 
     /*début de la partie fonctionnement*/
-    .title-fonctioning {
-        padding-bottom: 10px;
-        width: 100%;
-        font-size: 24px;
-        font-weight: 700;
-        font-family: 'Roboto';
-    }
-
     .fonctioning {
         display: flex;
         flex-direction: column;
@@ -553,21 +515,27 @@ li{
         background-color: #FFF;
     }
 
+    .title-fonctioning {
+        padding-bottom: 10px;
+        width: 100%;
+        font-size: 24px;
+        font-weight: 700;
+        font-family: 'Roboto';
+    }
+
+    /* bouton de la partie fonctionnement*/
     .fonctionning-button{
         display: flex;
     }
 
-    /* bouton de la partie fonctionnement*/
     .fonctioning-btn {
         border: none;
         border-radius: 20px;
         box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.15);
         width: 322.49px;
-        /* width: 50%; */
         text-align: center;
         margin-right: 40px;
         margin-left: 10px;
-        /* padding: 25px 0; */
         padding: 20px 58px 20px 0;
         display: flex;
         justify-content: space-evenly;
@@ -575,6 +543,7 @@ li{
         font-weight: 500;
         font-family: 'Roboto';
     }
+
     /* le test du bouton fonctionnement */
     .fonctioning-text{
         font-weight: 500;
@@ -583,7 +552,7 @@ li{
         margin-left: 20px;
     }
 
-    /* le cercle avec le numero */
+    /* les cercles avec les numeros */
     .circle{
         position: relative;
         left: -15px;
@@ -594,19 +563,28 @@ li{
     }
 
     /*début de la partie card*/
-    .restaurant-title {
-        width: 340px;
-        font-family: 'Roboto';
-        font-size: 24px;
-        font-weight: 700;
+    .back{
+        background-color: rgba(246, 246, 246, 1);
     }
 
+    .resto{
+        max-width: 1080px;
+        margin: auto;
+        width: 90%;
+    }
 
     .all-cards {
          
         padding: 45px 0 5px 0;
         width: 100%;
         margin: auto;
+    }
+
+    .restaurant-title {
+        width: 340px;
+        font-family: 'Roboto';
+        font-size: 24px;
+        font-weight: 700;
     }
 
     .cards-bloc{
@@ -622,18 +600,49 @@ li{
     .card {
         width: 100%;
         height: 251px;
-        /* height: 300px; */
         border-radius: 15px;
-        /* margin: 24px 110px 24px 0; */
         margin: 24px 0;
         background-color: rgba(255, 255, 255, 1);
+    }
+
+    #card1 {
+        background-image: url('../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg');
+        background-repeat: no-repeat;
+        background-position: 0px -107px;
+        background-size: cover;
+        border-radius: 15px 15px 0 0;
+    }
+
+    #card2 {
+        background-image: url('../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg');
+        background-repeat: no-repeat;
+        background-position: 0px -244px;
+        background-size: cover;
+        border-radius: 15px 15px 0 0;
+    }
+
+    #card3 {
+        background-image: url('../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg');
+        background-repeat: no-repeat;
+        background-position: 0px -103px;
+        background-size: cover;
+        border-radius: 15px 15px 0 0;
+    }
+
+    #card4 {
+        background-image: url('../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg');
+        background-repeat: no-repeat;
+        background-position: 0px -110px;
+        background-size: cover;
+        border-radius: 15px 15px 0 0;
     }
 
     .card-img {
         width: 100%;
         height: 170px;
-        /* height: 225px; */
+        
     }
+
     /*block nouveau sur les cards*/
     .news{
         font-weight: 500;
@@ -647,6 +656,11 @@ li{
         font-size: 14px;
         border-radius: 2px;
     }
+
+    .card-text {
+        padding: 5px 10px;
+    }
+
 
     .card-text h3 {
         line-height: 0;
@@ -663,18 +677,49 @@ li{
         font-family: 'Roboto';
 
     }
-
-    /*Positionnement de l'icone coeur sur les cards*/
-    .fa-heart {
-        font-size: 25px;
+    
+    /* Gestion des bouton likes  */
+    .block-like {
+        position: relative;
+        bottom: 44px;
+        left: 91%;
     }
 
-    /*début de la section footer*/
+    .block-like:hover {
+        cursor: pointer;
+    }
+
+    .like {
+        display: none;
+    }
+
+    input {
+        display: none;
+    }
+
+   
+
+    input:checked+.block-like .dislike {
+        display: none;
+    }
+
+    input:checked+.block-like .like {
+        display: inline;
+        width: 20px;
+    }
+
+    
+
+    /*******début de la section footer**********/
     .footer {
         background-color: rgba(53, 53, 53, 1);
         color: white;
         padding: 45px 38px 5px 0;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
     }
+
 
     .footer-logo{
         margin-left: 90px;
@@ -689,19 +734,12 @@ li{
         font-size: 23px;
     }
 
-    .space {
-        margin-left: 10px;
+    ul{
+        display: flex;
     }
 
-    .back{
-        background-color: rgba(246, 246, 246, 1);
-    }
-
-
-    .resto{
-        max-width: 1080px;
-        margin: auto;
-        width: 90%;
+    li{
+        padding: 0 15px;
     }
 
     /*icon footer*/
@@ -720,127 +758,6 @@ li{
         margin-left: -19px;
     }
 
-    #card1 {
-        background-image: url('../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg');
-        background-repeat: no-repeat;
-        /* background-position: bottom; */
-        background-position: 0px -107px;
-        /* background-position: 0px 55%; */
-        background-size: cover;
-        border-radius: 15px 15px 0 0;
-    }
 
-    #card2 {
-        background-image: url('../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg');
-        background-repeat: no-repeat;
-        background-position: 0px -244px;
-        /* background-position: 0px 50%; */
-        background-size: cover;
-        border-radius: 15px 15px 0 0;
-    }
-
-    #card3 {
-        background-image: url('../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg');
-        background-repeat: no-repeat;
-        /* background-position: bottom; */
-        background-position: 0px -103px;
-        /* background-position: 0px 55%; */
-        background-size: cover;
-        border-radius: 15px 15px 0 0;
-    }
-
-    #card4 {
-        background-image: url('../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg');
-        background-repeat: no-repeat;
-        /* background-position: bottom; */
-        background-position: 0px -110px;
-        /* background-position: 0px 55%; */
-        background-size: cover;
-        border-radius: 15px 15px 0 0;
-    }
-
-    .card-text {
-        padding: 5px 10px;
-    }
-
-    /* Gestion des bouton likes  */
-    .test1 {
-        position: relative;
-        bottom: 44px;
-        left: 91%;
-    }
-
-    .test1:hover {
-        cursor: pointer;
-    }
-
-    .like {
-        display: none;
-    }
-
-    #resto-1 {
-        display: none;
-    }
-
-    #resto-2 {
-        display: none;
-    }
-
-    #resto-3 {
-        display: none;
-    }
-
-    #resto-4 {
-        display: none;
-    }
-
-    #resto-1:checked+.test1 .dislike {
-        display: none;
-    }
-
-    #resto-1:checked+.test1 .like {
-        display: inline;
-        width: 20px;
-    }
-
-    #resto-2:checked+.test1 .dislike {
-        display: none;
-    }
-
-    #resto-2:checked+.test1 .like {
-        display: inline;
-        width: 20px;
-    }
-
-    #resto-3:checked+.test1 .dislike {
-        display: none;
-    }
-
-    #resto-3:checked+.test1 .like {
-        display: inline;
-        width: 25px;
-    }
-
-    #resto-4:checked+.test1 .dislike {
-        display: none;
-    }
-
-    #resto-4:checked+.test1 .like {
-        display: inline;
-        width: 20px;
-    }
-
-    .footer{
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-    }
-
-    ul{
-        display: flex;
-    }
-
-    li{
-        padding: 0 15px;
-    }
+   
 }
